fix: 修复Java编译错误
- FlowableDesignerService: Process类型歧义，使用全限定名org.flowable.bpmn.model.Process
- DroneController: Map.of()替换为HashMap（Java 8兼容）
- 批量修复其他Controller: Map.of()替换为HashMap/Collections.singletonMap